--- a/src/Board.css
+++ b/src/Board.css
@@ -64,3 +64,20 @@ img {
   z-index: 1000;
   text-align: center;
 }
+
+.promotion-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border: 2px solid #000;
+  padding: 20px;
+  z-index: 10;
+}
+
+.promotion-modal button {
+  margin: 5px;
+  padding: 10px;
+  cursor: pointer;
+}
